--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.18.1",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.4",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
